syntax = "proto3";

package exchange;

service ExchangeValue{
  rpc Exchange (ExchangeRequest) returns (ExchangeReply) {}
}

message ExchangeRequest{
  float amount = 1;
  string from = 2;
  string to = 3;
}

message ExchangeReply{
  float value = 1;
}
